@@ -1069,12 +1069,12 @@ bool HTMLTreeBuilder::processColgroupEndTagForInColumnGroup()
 void HTMLTreeBuilder::closeTheCell()
 {
     ASSERT(insertionMode() == InCellMode);
-    if (m_tree.openElements()->inScope(tdTag)) {
-        ASSERT(!m_tree.openElements()->inScope(thTag));
+    if (m_tree.openElements()->inTableScope(tdTag)) {
+        ASSERT(!m_tree.openElements()->inTableScope(thTag));
         processFakeEndTag(tdTag);
         return;
     }
-    ASSERT(m_tree.openElements()->inScope(thTag));
+    ASSERT(m_tree.openElements()->inTableScope(thTag));
     processFakeEndTag(thTag);
     ASSERT(insertionMode() == InRowMode);
 }
