@@ -1,3 +1,12 @@
+2010-07-12  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Adam Barth.
+
+        Fix typo in "close the cell" which caused assertion
+        https://bugs.webkit.org/show_bug.cgi?id=42138
+
+        * html5lib/resources/tables01.dat:
+
 2010-07-12  Martin Robinson  <mrobinson@igalia.com>
 
         Reviewed by Dirk Schulze.
